LibPST 0.6.33 (2009-xx-xx)
===============================

    * fix fedora 11 type mismatch warning (actually an error in this case).

LibPST 0.6.32 (2009-03-14)
===============================

    * fix ppc64 compile error.

LibPST 0.6.31 (2009-03-14)
===============================

    * bump version for fedora cvs tagging mistake.

LibPST 0.6.30 (2009-03-14)
===============================

    * improve documentation of .pst format.
    * remove decrypt option from getidblock - we always decrypt.
    * rename some structure fields to reflect our better understanding
      of the pst format.
    * track character set individually for each mapi element, since
      some could be unicode (therefore utf8) and others sbcs with
      character set specified by the mapi object. remove charset option
      from pst2ldif since we get that from each object now.
    * more code cleanup.
    * use AM_ICONV for better portability of the library location.
    * structure renaming to be more specific.
    * improve internal doxygen documentation.
    * avoid emitting bogus empty email messages into contacts and
      calendar files.

LibPST 0.6.29 (2009-02-24)
===============================
    * fix for 64bit on Fedora 11

LibPST 0.6.28 (2009-02-24)
===============================
    * add X-libpst-forensic-* headers to capture items of interest
      that are not used by normal mail clients.
    * improve decoding of multipart/report and message/rfc822 mime
      types.
    * improve character set handling - don't try to convert utf-8
      to single byte for fields that were not originally unicode.
      if the conversion fails, leave the data in utf-8.
    * fix embedded rfc822 messages with attachments.

LibPST 0.6.27 (2009-02-07)
===============================
    * fix for const correctness on Fedora 11

LibPST 0.6.26 (2009-02-07)
===============================
    * patch from Fridrich Strba for building on mingw and
      general cleanup of autoconf files